# aprendendo-rust

./: Cargo.toml  README.md
basico/: Cargo.toml
basico/src/: entrada.rs  estruturas.rs  exemplos.rs  fib.rs  hilbert.rs  main.rs  memoria.rs  utils.rs
basico/src/estruturas/: dir.rs  linked_list.rs  linked_stack.rs  queue.rs  stack.rs  vec2d.rs  vecpool.rs
basico/src/exemplos/: fib.rs  hilbert.rs  life.rs  snake.rs
basico/src/utils/: terminal.rs
benches/: basic.rs  linked.rs
src/: estruturas.rs  exemplos.rs  lib.rs  main.rs  utils.rs
src/estruturas/: dir.rs  graph.rs  linked_list.rs  queue.rs  stack.rs  vec2d.rs  vecpool.rs
src/exemplos/: dungeon.rs  expression.rs  fib.rs  hilbert.rs  life.rs  minesweeper.rs  snake.rs  sudoku.rs
src/utils/: entrada.rs  terminal.rs
